# scientific-agent-lab

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/cases/: 01_rfb_catholyte.json  02_microscopy_phase_id.json  03_xrd_complete_accept.json
demo/: index.html  serve.py
docs/: architecture.md  community-strategy.md  roadmap.md  vision.md
examples/materials_demo/: README.md  sample_input.json  sample_output.md
src/scientific_agent_lab/: __init__.py  cli.py  replay.py  report.py  schemas.py  workflow.py
src/scientific_agent_lab/agents/: __init__.py  evidence_agent.py  hypothesis_agent.py  observation_agent.py  planner_agent.py  reviewer_agent.py
src/scientific_agent_lab/evaluation/: __init__.py  benchmark.py  contracts.py  metrics.py
src/scientific_agent_lab/skills/: __init__.py  image_stub.py  literature.py  literature_stub.py  uncertainty.py  vision.py
tests/: test_benchmark.py  test_demo_serve.py  test_evaluation.py  test_report.py  test_reproducibility.py  test_schemas.py  test_workflow.py
